# bashdebugui

./: BashDbGui.pro  CMakeLists.txt  README.md  test_script.sh
src/: MainWindow.cpp  MainWindow.h  bashdbcommand.cpp  bashdbcommand.h  main.cpp  variablepanel.cpp  variablepanel.h  variablesview.cpp  variablesview.h
